# SharkInject

./: README.md  build.gradle  installcmd.bat  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/androidinject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/InjectModule/: CMakeLists.txt  InjectModule.cpp  PrintLog.h  common.h  fake_dlfcn.cpp  load_dex.cpp  load_dex.h
app/src/main/cpp/PtraceInject/: CMakeLists.txt  PrintLog.h  PtraceInject.cpp  PtraceInject.h  lib_name.cpp  lib_name.h  main.cpp  module_utils.cpp  module_utils.h  ptrace_utils.cpp  ptrace_utils.h
app/src/main/cpp/native-lib/: PrintLog.h  native-lib.cpp
app/src/main/java/com/app/context/: ContextUtils.java  RunUiInterface.java
app/src/main/java/com/app/logic/: LogicEntry.java
app/src/main/java/com/app/service/: AbstractEntry.java  Entry.java
app/src/main/java/com/app/signal/: IRecvListener.java
app/src/main/java/com/app/socket/: JWebSocketClient.java  WebSocketMessage.java
app/src/main/java/com/app/tools/: ScreenShot.java
app/src/main/java/com/app/view/: ViewHelper.java  ViewInfo.java  ViewManager.java
app/src/main/java/com/example/androidinject/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/androidinject/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
